[package]
name = "feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gix = "0.43"
gix-odb = "0.43"
gix-traverse = "0.24"
gix-diff = "0.28"
gix-hash = "0.10.3"
gix-object = "0.28"
regex = "1.7.3"
snafu = "0.7.4"
